--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,30 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
 
+    <string name="inline_preferences">Preferences</string>
+    <string name="preference_attributes">attributes</string>
+    <string name="title_parent_preference">titles</string>
+    <string name="title_checkbox_preference">checkbox</string>
+    <string name ="summary_checkbox_preference">summary</string>
+    <string name="dialog_based_preferences">dialog</string>
+    <string name="title_edittext_preference">edittext title</string>
+    <string name="summary_edittext_preference">summary</string>
+    <string name="dialog_title_edittext_preference">dialog</string>
+    <string name="title_list_preference">title list</string>
+    <string name="summary_list_preference">list pref</string>
+
+    <string name="dialog_title_list_preference">dialog</string>
+    <string name="launch_preferences">launch pref</string>
+    <string name="title_screen_preference">entries</string>
+    <string name="summary_screen_preference">vals</string>
+    <string name="title_next_screen_toggle_preference">next scr</string>
+    <string name="summary_next_screen_toggle_preference">sum next</string>
+    <string name="title_intent_preference">title intent</string>
+    <string name="summary_intent_preference">summary intent</string>
+    <string name="summary_parent_preference">summary parent</string>
+    <string name="title_child_preference">title child</string>
+    <string name="summary_child_preference">sum child</string>
+
 
     <string name="pref_send_report">Send crash reports</string>
     <string name="pref_send_report_summary">Helps to fix bugs</string>
