--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">SNMPrint</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="add_printer">Add Printer</string>
     <string name="title_activity_main">MainActivity</string>
-
     
     <string name="pref_send_report">Send crash reports</string>
     <string name="pref_send_report_summary">Helps to fix bugs</string>
@@ -18,6 +18,13 @@
 
     <string name="pref_id">xyz</string>
     <string name="pref_mod">modified</string>
+
+    <string name="print_title">"Add Printer Details</string>
+    <string name="print_name">Set Printer Name</string>
+    <string name="print_name_summary">Enter the name of a printer</string>
+
+    <string name="ip_title">131.204.116.</string>
+    <string name="ip_end_summary">176</string>
     
     
 </resources>
